--- a/static/app.css
+++ b/static/app.css
@@ -75,3 +75,82 @@ body {
 .value {
 	display: inline-block;
 }
+
+.email_body {
+	width: 100%;
+	max-height: 400px;
+	overflow-y: auto;
+	border: 1px solid #ddd;
+	border-radius: 2px;
+	padding: 0 10px;
+}
+
+/* Modal Styles */
+
+.modal-mask {
+	position: fixed;
+	z-index: 9998;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .5);
+	display: table;
+}
+
+.modal-wrapper {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.modal-container {
+	width: 1000px;
+	max-width: 80hh;
+	max-height: 80vh;
+	margin: 0px auto;
+	padding: 20px 30px;
+	background-color: #fff;
+	border-radius: 2px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+.modal-header h3 {
+	margin-top: 0;
+	color: #42b983;
+}
+
+.modal-body {
+	margin: 20px 0;
+}
+
+.modal-default-button {
+}
+
+.modal-open {
+	overflow: hidden;
+}
+
+/*
+The following styles are auto-applied to elements with
+transition="modal" when their visibility is toggled
+by Vue.js.
+
+You can easily play with the modal transition by editing
+these styles.
+ */
+
+	.modal-enter {
+		opacity: 0;
+	}
+
+	.modal-leave-active {
+		opacity: 0;
+	}
+
+	.modal-enter .modal-container,
+	.modal-leave-active .modal-container {
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+
