--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,41 +1,3 @@
-
-/*
-.message_list {
-	width: 100%;
-	border-collapse: collapse;
-}
-
-.message_list td {
-	padding: 0 5px;
-}
-
-.message_list td.fixed_col {
-	width: 200px;
-}
-.message_list td.flag_col {
-	width: 30px;
-}
-
-.message_list th {
-	color: #fff;
-	background-color: #617F8D;
-	padding: 5px 0;
-	cursor: initial;
-}
-
-.message_list tr {
-	background-color: #DDF0FB;
-	cursor: pointer;
-}
-
-.message_list tr:nth-child(odd) {
-	background-color: #EEFFFF;
-}
-
-.message_list tr:hover {
-	background-color: #FFF1DA;
-}
-*/
 .message_list tbody tr {
 	cursor: pointer;
 }
@@ -147,7 +109,7 @@
 
 .email_body {
 	width: 100%;
-	max-height: 400px;
+	max-height: 80vh;
 	overflow-y: auto;
 }
 
@@ -164,78 +126,15 @@
 	font-size: 0.9em;
 }
 
-/* Modal Styles */
-
-.modal-mask {
-	position: fixed;
-	z-index: 9998;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, .5);
-	display: table;
+.hidden {
+	display: none;
 }
 
-.modal-wrapper {
-	display: table-cell;
-	vertical-align: middle;
+#message-view {
+	margin-top: 100px;
 }
 
-.modal-container {
-	width: 1000px;
-	max-width: 80vw;
-	max-height: 80vh;
-	margin: 0px auto;
-	padding: 20px 30px;
-	background-color: #fff;
-	border-radius: 2px;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
+#message-view-header {
+	margin-top: 100px;
+	margin-bottom: 20px;
 }
-
-.modal-header {
-}
-
-
-.modal-body {
-	margin: 20px 0;
-}
-
-.modal-footer {
-	position: relative;
-	height: 40px;
-}
-
-.modal-default-button {
-	position: absolute;
-	right: 0;
-	bottom: 0;
-}
-
-.modal-open {
-	overflow: hidden;
-}
-
-/*
-The following styles are auto-applied to elements with
-transition="modal" when their visibility is toggled
-by Vue.js.
-
-You can easily play with the modal transition by editing
-these styles.
- */
-
-	.modal-enter {
-		opacity: 0;
-	}
-
-	.modal-leave-active {
-		opacity: 0;
-	}
-
-	.modal-enter .modal-container,
-	.modal-leave-active .modal-container {
-		-webkit-transform: scale(1.1);
-		transform: scale(1.1);
-	}
-
