--- a/static/css/app.css
+++ b/static/css/app.css
@@ -43,7 +43,8 @@
 	width: 20px;
 	height: 20px;
 	line-height: 20px;
-	color: #999;
+	color: #000;
+	font-size: 1.2em;
 }
 
 .results_page {
@@ -54,21 +55,6 @@
 .results_page.active {
 	font-weight: bold;
 	color: #000;
-}
-
-.arrow {
-	width: 0;
-	height: 0;
-	border-top: 7px solid transparent;
-	border-bottom: 7px solid transparent;
-}
-
-.arrow.left {
-	border-right: 20px solid;
-}
-
-.arrow.right {
-	border-left: 20px solid;
 }
 
 #search_bar {
@@ -135,6 +121,11 @@
 }
 
 #message-view-header {
-	margin-top: 100px;
+	margin-top: 50px;
 	margin-bottom: 20px;
+}
+
+.home-link {
+	margin-top: 20px;
+	display: inline-block;
 }
