--- a/static/css/app.css
+++ b/static/css/app.css
@@ -141,4 +141,22 @@
 .back-link {
 	margin-top: 20px;
 	display: inline-block;
+	cursor: pointer;
 }
+
+/*
+.slide-right-enter-active, .slide-left-enter-active {
+  transition: all .5s ease;
+}
+.slide-right-leave-active, .slide-left-leave-active {
+  transition: all .5s ease;
+}
+
+.slide-right-enter, .slide-right-leave-to {
+  transform: translateX(200px);
+}
+
+.slide-left-enter, .slide-left-leave-to {
+  transform: translateX(-200px);
+}
+*/
